# -*- coding: utf-8 -*-

2009-05-01  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/specification.rb:  Check bindir for executables, not
	  root.  Bug reported by David Chelimsky.  Remove Time.today, no way
	  to override it before RubyGems loads.  Raise Gem::Exception for
	  #installation_path when not installed.  Bug #25741 by Daniel Berger.
	  Don't error in #validate when homepage is nil.  Bug #25677.
	* lib/rubygems/commands/cleanup_command.rb:  Clean up --user-install
	  gems.  Bug #25516 by Brett Eisenberg.
	* lib/rubygems/uninstaller.rb:  Uninstall executables from the correct
	  directory.  Bug #25555 by Brett Eisenberg.

2009-05-01  James Tucker  <jftucker@gmail.com>

	* lib/rubygems.rb: Gem.bin_path now escapes paths with spaces.

2009-04-30  Daniel Berger  <djberg96@gmail.com>

	* lib/rubygems/commands/install_command.rb:  Replaced deprecated
	  Gem::SourceIndex method 'search' with 'find_name' when using
	  the -t option. Fixes bug # 25632 by Daniel Berger.

2009-04-30  James Tucker  <jftucker@gmail.com>

	* lib/rubygems/ext/rake_builder.rb: Use explicit ruby command loading
	  rubygems to invoke rake.

2009-04-24  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/commands/specification_command.rb:  Added requesting
	  single fields from a spec.

2009-04-23  James Tucker  <jftucker@gmail.com>

	* lib/rubygems/ext/configure_builder.rb: Support Gem::Command.build_args.

2009-04-15  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/rubygems_version.rb: 1.3.2.

2009-04-14  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/specification.rb:  Complain when summary and
	  description are identical.

2009-04-08  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/specification.rb:  Strip directories, complain for
	  non-files in #validate.

2009-04-07  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/specification.rb:  Implement #initialize_copy.
	* lib/rubygems/commands/contents_command.rb:  Add --no-prefix and
	  --all.
